{
  "version": 4,
  "terraform_version": "1.15.8",
  "serial": 45,
  "lineage": "b20fdf41-59e4-3e8a-2c48-f14b5bdb2a4e",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "id": "/subscriptions/74ea27b4-aa4a-4f89-b10f-7c71fa5f19a9/resourceGroups/myRg-terr/providers/Microsoft.Network/networkInterfaces/tf-nic",
            "internal_domain_name_suffix": "4gimbspfig4epcce1d5usjn4ha.rx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/74ea27b4-aa4a-4f89-b10f-7c71fa5f19a9/resourceGroups/myRg-terr/providers/Microsoft.Network/publicIPAddresses/tf-public-ip",
                "subnet_id": "/subscriptions/74ea27b4-aa4a-4f89-b10f-7c71fa5f19a9/resourceGroups/myRg-terr/providers/Microsoft.Network/virtualNetworks/vnet-tf/subnets/subnet-tf"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "centralindia",
            "name": "tf-nic",
            "private_ip_address": "10.0.1.4",
            "private_ip_addresses": [
              "10.0.1.4"
            ],
            "resource_group_name": "myRg-terr"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "tf-nic",
            "resource_group_name": "myRg-terr",
            "subscription_id": "74ea27b4-aa4a-4f89-b10f-7c71fa5f19a9"
          },
          "dependencies": [
            "azurerm_public_ip.pip",
            "azurerm_subnet.subnet",
            "azurerm_virtual_network.vnet",
            "data.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/74ea27b4-aa4a-4f89-b10f-7c71fa5f19a9/resourceGroups/myRg-terr/providers/Microsoft.Network/networkInterfaces/tf-nic|/subscriptions/74ea27b4-aa4a-4f89-b10f-7c71fa5f19a9/resourceGroups/myRg-terr/providers/Microsoft.Network/networkSecurityGroups/tf-nsg",
            "network_interface_id": "/subscriptions/74ea27b4-aa4a-4f89-b10f-7c71fa5f19a9/resourceGroups/myRg-terr/providers/Microsoft.Network/networkInterfaces/tf-nic",
            "network_security_group_id": "/subscriptions/74ea27b4-aa4a-4f89-b10f-7c71fa5f19a9/resourceGroups/myRg-terr/providers/Microsoft.Network/networkSecurityGroups/tf-nsg"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_network_interface.nic",
            "azurerm_network_security_group.nsg",
            "azurerm_public_ip.pip",
            "azurerm_subnet.subnet",
            "azurerm_virtual_network.vnet",
            "data.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/74ea27b4-aa4a-4f89-b10f-7c71fa5f19a9/resourceGroups/myRg-terr/providers/Microsoft.Network/networkSecurityGroups/tf-nsg",
            "location": "centralindia",
            "name": "tf-nsg",
            "resource_group_name": "myRg-terr",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowSSH",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "tf-nsg",
            "resource_group_name": "myRg-terr",
            "subscription_id": "74ea27b4-aa4a-4f89-b10f-7c71fa5f19a9"
          },
          "dependencies": [
            "data.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "22",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/74ea27b4-aa4a-4f89-b10f-7c71fa5f19a9/resourceGroups/myRg-terr/providers/Microsoft.Network/networkSecurityGroups/tf-nsg/securityRules/AllowSSH",
            "name": "AllowSSH",
            "network_security_group_name": "tf-nsg",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "myRg-terr",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "AllowSSH",
            "network_security_group_name": "tf-nsg",
            "resource_group_name": "myRg-terr",
            "subscription_id": "74ea27b4-aa4a-4f89-b10f-7c71fa5f19a9"
          },
          "dependencies": [
            "azurerm_network_security_group.nsg",
            "data.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "pip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/74ea27b4-aa4a-4f89-b10f-7c71fa5f19a9/resourceGroups/myRg-terr/providers/Microsoft.Network/publicIPAddresses/tf-public-ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.198.6.34",
            "ip_version": "IPv4",
            "location": "centralindia",
            "name": "tf-public-ip",
            "resource_group_name": "myRg-terr",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "tf-public-ip",
            "resource_group_name": "myRg-terr",
            "subscription_id": "74ea27b4-aa4a-4f89-b10f-7c71fa5f19a9"
          },
          "dependencies": [
            "data.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/74ea27b4-aa4a-4f89-b10f-7c71fa5f19a9/resourceGroups/myRg-terr/providers/Microsoft.Network/virtualNetworks/vnet-tf/subnets/subnet-tf",
            "name": "subnet-tf",
            "network_security_group_id_wo_version": 0,
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "myRg-terr",
            "route_table_id_wo_version": 0,
            "virtual_network_name": "vnet-tf"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "subnet-tf",
            "resource_group_name": "myRg-terr",
            "subscription_id": "74ea27b4-aa4a-4f89-b10f-7c71fa5f19a9",
            "virtual_network_name": "vnet-tf"
          },
          "dependencies": [
            "azurerm_virtual_network.vnet",
            "data.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "c9c090f1-41e5-47bc-8844-d8ff4925be38",
            "id": "/subscriptions/74ea27b4-aa4a-4f89-b10f-7c71fa5f19a9/resourceGroups/myRg-terr/providers/Microsoft.Network/virtualNetworks/vnet-tf",
            "location": "centralindia",
            "name": "vnet-tf",
            "private_endpoint_vnet_policies": "Disabled",
            "resource_group_name": "myRg-terr",
            "subnet": [
              {
                "address_prefixes": [
                  "10.0.1.0/24"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/74ea27b4-aa4a-4f89-b10f-7c71fa5f19a9/resourceGroups/myRg-terr/providers/Microsoft.Network/virtualNetworks/vnet-tf/subnets/subnet-tf",
                "name": "subnet-tf",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true
              }
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "vnet-tf",
            "resource_group_name": "myRg-terr",
            "subscription_id": "74ea27b4-aa4a-4f89-b10f-7c71fa5f19a9"
          },
          "dependencies": [
            "data.azurerm_resource_group.rg"
          ]
        }
      ]
    }
  ]
}